Värvi ka teiste kujundite nupud.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+#CircleButton {
+  background: SteelBlue;
+}
+#ParallelogramButton {
+  background: SeaGreen;
+}
 #TriangleButton {
   background: Crimson;
 }
